# skyweave

./: .gitignore  Cargo.toml  README.md  README2.md
server/: .env  Cargo.toml  fly.toml
server/src/: config.rs  main.rs  telemetry.rs  websocket_server.rs
sim/: CMakeLists.txt  sim
sim/src/: environment.cpp  environment.h  formation.h  main.cpp  path_follower.cpp  path_follower.h  pathfinder.cpp  pathfinder.h  pathfollower.cpp  pathfollower.h  simulator.cpp  simulator.h  swarm_coordinator.cpp  swarm_coordinator.h  swarm_tuning.cpp  swarm_tuning.h  telemetry_server.cpp  telemetry_server.h  uav.cpp  uav.h
src/: main.cpp  simulator.cpp  simulator.h  telemetry_server.cpp  telemetry_server.h  uav.cpp  uav.h
udp_ws_bridge/: package-lock.json  package.json  udp_ws_bridge.mjs
ui/: .gitignore  package-lock.json  package.json
ui/app/: globals.css  page.tsx
ui/app/components/: CommandPanel.tsx  SwarmControls.tsx  TelemetryTable.tsx  UavScene.tsx
ui/app/guide/: page.tsx
ui/app/hooks/: useTelemetry.ts
ui/app/telemetry/: page.tsx
